--- a/plugin-management.html
+++ b/plugin-management.html
@@ -98,25 +98,29 @@
 <td>2.8.1</td></tr>
 <tr class="b">
 <td>org.apache.maven.plugins</td>
+<td><a class="externalLink" href="http://maven.apache.org/enforcer/maven-enforcer-plugin">maven-enforcer-plugin</a></td>
+<td>1.3.1</td></tr>
+<tr class="a">
+<td>org.apache.maven.plugins</td>
 <td><a class="externalLink" href="http://maven.apache.org/plugins/maven-install-plugin/">maven-install-plugin</a></td>
 <td>2.5.1</td></tr>
-<tr class="a">
+<tr class="b">
 <td>org.apache.maven.plugins</td>
 <td><a class="externalLink" href="http://maven.apache.org/plugins/maven-project-info-reports-plugin/">maven-project-info-reports-plugin</a></td>
 <td>2.7</td></tr>
-<tr class="b">
+<tr class="a">
 <td>org.apache.maven.plugins</td>
 <td><a class="externalLink" href="http://maven.apache.org/maven-release/maven-release-plugin/">maven-release-plugin</a></td>
 <td>2.5</td></tr>
-<tr class="a">
+<tr class="b">
 <td>org.apache.maven.plugins</td>
 <td><a class="externalLink" href="http://maven.apache.org/plugins/maven-site-plugin/">maven-site-plugin</a></td>
 <td>3.3</td></tr>
-<tr class="b">
+<tr class="a">
 <td>org.codehaus.mojo</td>
 <td><a class="externalLink" href="http://mojo.codehaus.org/versions-maven-plugin">versions-maven-plugin</a></td>
 <td>2.1</td></tr>
-<tr class="a">
+<tr class="b">
 <td>org.eclipse.m2e</td>
 <td>lifecycle-mapping</td>
 <td>1.0.0</td></tr></table></div>
