--- a/plugin-updates-report.html
+++ b/plugin-updates-report.html
@@ -72,7 +72,7 @@
 <tr class="a">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td># of plugins using the latest version available</td>
-<td>12</td></tr>
+<td>13</td></tr>
 <tr class="b">
 <td><img src="images/icon_warning_sml.gif" alt="" /></td>
 <td># of plugins where the next version available is smaller than an incremental version update</td>
@@ -84,7 +84,7 @@
 <tr class="b">
 <td><img src="images/icon_warning_sml.gif" alt="" /></td>
 <td># of plugins where the next version available is a minor version update</td>
-<td>1</td></tr>
+<td>0</td></tr>
 <tr class="a">
 <td><img src="images/icon_warning_sml.gif" alt="" /></td>
 <td># of plugins where the next version available is a major version update</td>
@@ -169,6 +169,16 @@
 <tr class="b">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td>org.apache.maven.plugins</td>
+<td>maven-enforcer-plugin</td>
+<td><b>1.3.1</b></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td><img src="images/icon_success_sml.gif" alt="" /></td></tr>
+<tr class="a">
+<td><img src="images/icon_success_sml.gif" alt="" /></td>
+<td>org.apache.maven.plugins</td>
 <td>maven-install-plugin</td>
 <td><b>2.5.1</b></td>
 <td></td>
@@ -176,7 +186,7 @@
 <td></td>
 <td></td>
 <td><img src="images/icon_success_sml.gif" alt="" /></td></tr>
-<tr class="a">
+<tr class="b">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td>org.apache.maven.plugins</td>
 <td>maven-project-info-reports-plugin</td>
@@ -186,7 +196,7 @@
 <td></td>
 <td></td>
 <td><img src="images/icon_success_sml.gif" alt="" /></td></tr>
-<tr class="b">
+<tr class="a">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td>org.apache.maven.plugins</td>
 <td>maven-release-plugin</td>
@@ -196,7 +206,7 @@
 <td></td>
 <td></td>
 <td><img src="images/icon_success_sml.gif" alt="" /></td></tr>
-<tr class="a">
+<tr class="b">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td>org.apache.maven.plugins</td>
 <td>maven-site-plugin</td>
@@ -206,7 +216,7 @@
 <td></td>
 <td></td>
 <td><img src="images/icon_success_sml.gif" alt="" /></td></tr>
-<tr class="b">
+<tr class="a">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td>org.codehaus.mojo</td>
 <td>versions-maven-plugin</td>
@@ -216,7 +226,7 @@
 <td></td>
 <td></td>
 <td><img src="images/icon_success_sml.gif" alt="" /></td></tr>
-<tr class="a">
+<tr class="b">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td>org.eclipse.m2e</td>
 <td>lifecycle-mapping</td>
@@ -226,7 +236,7 @@
 <td></td>
 <td></td>
 <td><img src="images/icon_success_sml.gif" alt="" /></td></tr>
-<tr class="b">
+<tr class="a">
 <th>Status</th>
 <th>Group Id</th>
 <th>Artifact Id</th>
@@ -238,37 +248,7 @@
 <th>Dependency status</th></tr></table></div>
 <div class="section">
 <h3>Plugins<a name="Plugins"></a></h3>
-<table border="0" class="bodyTable">
-<tr class="a">
-<th>Status</th>
-<th>Group Id</th>
-<th>Artifact Id</th>
-<th>Current Version</th>
-<th>Next Version</th>
-<th>Next Incremental</th>
-<th>Next Minor</th>
-<th>Next Major</th>
-<th>Dependency status</th></tr>
-<tr class="b">
-<td><img src="images/icon_warning_sml.gif" alt="" /></td>
-<td>org.apache.maven.plugins</td>
-<td>maven-enforcer-plugin</td>
-<td>1.2</td>
-<td></td>
-<td></td>
-<td><b>1.3</b></td>
-<td></td>
-<td><img src="images/icon_success_sml.gif" alt="" /></td></tr>
-<tr class="a">
-<th>Status</th>
-<th>Group Id</th>
-<th>Artifact Id</th>
-<th>Current Version</th>
-<th>Next Version</th>
-<th>Next Incremental</th>
-<th>Next Minor</th>
-<th>Next Major</th>
-<th>Dependency status</th></tr></table></div></div>
+<p>This project does not declare any plugins in a build/plugins setcion.</p></div></div>
 <div class="section">
 <h2>Plugin Updates<a name="Plugin_Updates"></a></h2>
 <p></p>
@@ -367,7 +347,7 @@
 <table border="0" class="bodyTable">
 <tr class="a">
 <th width="80%">Status</th>
-<td><img src="images/icon_warning_sml.gif" alt="" />&#160;There is at least one newer minor version available. Minor updates are sometimes passive.</td></tr>
+<td><img src="images/icon_success_sml.gif" alt="" />&#160;No newer versions available.</td></tr>
 <tr class="b">
 <th width="80%">Group Id</th>
 <td>org.apache.maven.plugins</td></tr>
@@ -376,10 +356,7 @@
 <td>maven-enforcer-plugin</td></tr>
 <tr class="b">
 <th width="80%">Current Version</th>
-<td>1.2</td></tr>
-<tr class="a">
-<th width="80%">Newer versions</th>
-<td><b>1.3</b>&#160;<i>Next Minor</i><br /><b>1.3.1</b>&#160;<i>Latest Minor</i></td></tr></table></div>
+<td>1.3.1</td></tr></table></div>
 <div class="section">
 <h3>Plugin org.apache.maven.plugins:maven-install-plugin<a name="Plugin_org.apache.maven.plugins:maven-install-plugin"></a></h3>
 <table border="0" class="bodyTable">
