--- a/dependency-convergence.html
+++ b/dependency-convergence.html
@@ -81,22 +81,22 @@
 </caption>
 <tr class="a">
 <th>Number of sub-projects:</th>
-<td>2</td></tr>
+<td>4</td></tr>
 <tr class="b">
 <th>Number of dependencies (NOD):</th>
-<td>3</td></tr>
+<td>10</td></tr>
 <tr class="a">
 <th>Number of unique artifacts (NOA):</th>
-<td>3</td></tr>
+<td>10</td></tr>
 <tr class="b">
 <th>Number of SNAPSHOT artifacts (NOS):</th>
-<td>0</td></tr>
+<td>2</td></tr>
 <tr class="a">
 <th>Convergence (NOD/NOA):</th>
 <td><img alt="success" src="images/icon_success_sml.gif" />&#160;<b>100%</b></td></tr>
 <tr class="b">
 <th>Ready for Release (100% Convergence and no SNAPSHOTS):</th>
-<td><img alt="success" src="images/icon_success_sml.gif" />&#160;<b>Success</b></td></tr></table></div>
+<td><img alt="error" src="images/icon_error_sml.gif" />&#160;<b>Error</b><br />You have SNAPSHOT dependencies.</td></tr></table></div>
 <div class="section">
 <h3>Dependencies used in sub-projects<a name="Dependencies_used_in_sub-projects"></a></h3>
 <div class="section">
@@ -110,6 +110,8 @@
 <td width="25%">7.0</td>
 <td>
 <ol style="list-style-type: lower-alpha">
+<li><a class="externalLink" href="http://site.trajano.net/app/app-it">net.trajano.app:app-it</a></li>
+<li><a class="externalLink" href="http://site.trajano.net/app/app-web">net.trajano.app:app-web</a></li>
 <li><a class="externalLink" href="http://site.trajano.net/app">net.trajano.app:app</a></li></ol></td></tr></table></td></tr></table></div>
 <div class="section">
 <h4>junit:junit<a name="junit:junit"></a></h4>
@@ -122,7 +124,33 @@
 <td width="25%">4.11</td>
 <td>
 <ol style="list-style-type: lower-alpha">
+<li><a class="externalLink" href="http://site.trajano.net/app/app-it">net.trajano.app:app-it</a></li>
+<li><a class="externalLink" href="http://site.trajano.net/app/app-web">net.trajano.app:app-web</a></li>
 <li><a class="externalLink" href="http://site.trajano.net/app">net.trajano.app:app</a></li></ol></td></tr></table></td></tr></table></div>
+<div class="section">
+<h4>net.trajano.app:app-ear<a name="net.trajano.app:app-ear"></a></h4>
+<table border="0" class="bodyTable">
+<tr class="a">
+<td><img alt="success" src="images/icon_success_sml.gif" /></td>
+<td>
+<table border="0" class="bodyTable">
+<tr class="b">
+<td width="25%">1.0.0-SNAPSHOT</td>
+<td>
+<ol style="list-style-type: lower-alpha">
+<li><a class="externalLink" href="http://site.trajano.net/app/app-it">net.trajano.app:app-it</a></li></ol></td></tr></table></td></tr></table></div>
+<div class="section">
+<h4>net.trajano.app:app-ws<a name="net.trajano.app:app-ws"></a></h4>
+<table border="0" class="bodyTable">
+<tr class="a">
+<td><img alt="success" src="images/icon_success_sml.gif" /></td>
+<td>
+<table border="0" class="bodyTable">
+<tr class="b">
+<td width="25%">1.0.0-SNAPSHOT</td>
+<td>
+<ol style="list-style-type: lower-alpha">
+<li><a class="externalLink" href="http://site.trajano.net/app/app-web">net.trajano.app:app-web</a></li></ol></td></tr></table></td></tr></table></div>
 <div class="section">
 <h4>net.trajano.maven.skins:twentyfourteen-maven-skin<a name="net.trajano.maven.skins:twentyfourteen-maven-skin"></a></h4>
 <table border="0" class="bodyTable">
@@ -134,8 +162,70 @@
 <td width="25%">1.0.2</td>
 <td>
 <ol style="list-style-type: lower-alpha">
+<li><a class="externalLink" href="http://site.trajano.net/app/app-it">net.trajano.app:app-it</a></li>
+<li><a class="externalLink" href="http://site.trajano.net/app/app-web">net.trajano.app:app-web</a></li>
 <li><a class="externalLink" href="http://site.trajano.net/app">net.trajano.app:app</a></li>
-<li><a class="externalLink" href="http://site.trajano.net/trajano/">net.trajano:trajano</a></li></ol></td></tr></table></td></tr></table></div></div>
+<li><a class="externalLink" href="http://site.trajano.net/trajano/">net.trajano:trajano</a></li></ol></td></tr></table></td></tr></table></div>
+<div class="section">
+<h4>org.glassfish.main.extras:glassfish-embedded-all<a name="org.glassfish.main.extras:glassfish-embedded-all"></a></h4>
+<table border="0" class="bodyTable">
+<tr class="a">
+<td><img alt="success" src="images/icon_success_sml.gif" /></td>
+<td>
+<table border="0" class="bodyTable">
+<tr class="b">
+<td width="25%">4.0</td>
+<td>
+<ol style="list-style-type: lower-alpha">
+<li><a class="externalLink" href="http://site.trajano.net/app/app-web">net.trajano.app:app-web</a></li></ol></td></tr></table></td></tr></table></div>
+<div class="section">
+<h4>org.seleniumhq.selenium:selenium-firefox-driver<a name="org.seleniumhq.selenium:selenium-firefox-driver"></a></h4>
+<table border="0" class="bodyTable">
+<tr class="a">
+<td><img alt="success" src="images/icon_success_sml.gif" /></td>
+<td>
+<table border="0" class="bodyTable">
+<tr class="b">
+<td width="25%">2.41.0</td>
+<td>
+<ol style="list-style-type: lower-alpha">
+<li><a class="externalLink" href="http://site.trajano.net/app/app-it">net.trajano.app:app-it</a></li></ol></td></tr></table></td></tr></table></div>
+<div class="section">
+<h4>org.seleniumhq.selenium:selenium-support<a name="org.seleniumhq.selenium:selenium-support"></a></h4>
+<table border="0" class="bodyTable">
+<tr class="a">
+<td><img alt="success" src="images/icon_success_sml.gif" /></td>
+<td>
+<table border="0" class="bodyTable">
+<tr class="b">
+<td width="25%">2.41.0</td>
+<td>
+<ol style="list-style-type: lower-alpha">
+<li><a class="externalLink" href="http://site.trajano.net/app/app-it">net.trajano.app:app-it</a></li></ol></td></tr></table></td></tr></table></div>
+<div class="section">
+<h4>org.webjars:angularjs<a name="org.webjars:angularjs"></a></h4>
+<table border="0" class="bodyTable">
+<tr class="a">
+<td><img alt="success" src="images/icon_success_sml.gif" /></td>
+<td>
+<table border="0" class="bodyTable">
+<tr class="b">
+<td width="25%">1.2.3</td>
+<td>
+<ol style="list-style-type: lower-alpha">
+<li><a class="externalLink" href="http://site.trajano.net/app/app-web">net.trajano.app:app-web</a></li></ol></td></tr></table></td></tr></table></div>
+<div class="section">
+<h4>org.webjars:bootstrap<a name="org.webjars:bootstrap"></a></h4>
+<table border="0" class="bodyTable">
+<tr class="a">
+<td><img alt="success" src="images/icon_success_sml.gif" /></td>
+<td>
+<table border="0" class="bodyTable">
+<tr class="b">
+<td width="25%">3.1.1-1</td>
+<td>
+<ol style="list-style-type: lower-alpha">
+<li><a class="externalLink" href="http://site.trajano.net/app/app-web">net.trajano.app:app-web</a></li></ol></td></tr></table></td></tr></table></div></div>
 	      </div>
 	    </article>
 	  </div>
